minor styling changes. added profiles endpoints
